# arabic-og-llm-eval

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_item.md  bug_report.md  new_adapter.md
.github/workflows/: test.yml
arog_eval/: __init__.py  cli.py  failure_modes.py  metrics.py  reports.py  runner.py  schemas.py
arog_eval/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
arog_eval/judges/: __init__.py  claude_judge.py
benchmark/: LICENSE
benchmark/v1/: CONTRIBUTORS.md  code_switched.jsonl  doc_grounding.jsonl  process_qa.jsonl  safety.jsonl  terminology.jsonl
docs/: adding-models.md  failure-modes.md  methodology.md
examples/: README.md  compare_models.py
scripts/: run_benchmark.py
tests/: test_failure_modes.py  test_metrics.py  test_schemas.py
