[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arog-eval"
version = "0.1.0"
description = "Bilingual Arabic / English Oil & Gas LLM evaluation benchmark and harness"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Hossain Albasha", email = "Albasha.Hossain@gmail.com" },
]
keywords = ["llm", "evaluation", "arabic", "oil-and-gas", "bilingual", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Arabic",
    "Natural Language :: English",
]

dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
huggingface = ["transformers>=4.45", "torch>=2.4", "sentencepiece>=0.2"]
ollama = ["httpx>=0.27"]
embeddings = ["sentence-transformers>=3.0"]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
    "transformers>=4.45",
    "torch>=2.4",
    "sentencepiece>=0.2",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
arog-eval = "arog_eval.cli:main"

[project.urls]
Homepage = "https://github.com/hossainalbasha/arabic-og-llm-eval"
Documentation = "https://github.com/hossainalbasha/arabic-og-llm-eval#readme"
Issues = "https://github.com/hossainalbasha/arabic-og-llm-eval/issues"

[tool.setuptools.packages.find]
include = ["arog_eval*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
